z-index fix

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -686,7 +686,7 @@ button{
     bottom: -135px;
     display: none;
     transition: 1s;
-    z-index: 1000;
+    z-index: 10000;
 }
 
 .themes a{
